<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center">


    <FrameLayout
        android:id="@+id/animationFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:divider="@drawable/vertical_div"
            android:orientation="vertical"
            android:showDividers="middle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/main_menu_tittle_collor"
                android:textSize="50dp"
                android:shadowColor="@android:color/black"
                android:shadowRadius="20"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_button"
                android:onClick="onClickStartButton"
                android:text="@string/start"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnDictionaty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_button"
                android:onClick="onClickDictionatyButton"
                android:text="@string/dictionaty"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_button"
                android:onClick="onClickProfileButton"
                android:text="@string/profile"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_button"
                android:onClick="onClickExitButton"
                android:text="@string/exit"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
